update author and copyright